# polychrome

./: Cargo.toml  README.md
src/: color.rs  lib.rs  main.rs
tests/: integration_tests.rs
