[package]
name = "polychrome"
version = "2.0.3"
edition = "2021"
authors = ["Elias Leguizamon <elias.leguizamon1997@gmail.com>"]
description = "A crate for printing colored and underlined text in the terminal."
documentation = "https://docs.rs/polychrome/latest/polychrome/"
license = "MIT"

[dependencies]
rand = "0.8.5"
